@@ -8,5 +8,6 @@
     type="string">Portal Administrator</property>
  <property name="validate_email" type="boolean">False</property>
  <property name="default_charset" type="string">utf-8</property>
+ <property name="email_charset" type="string">iso-8859-1</property>
  <property name="enable_permalink" type="boolean">False</property>
 </site>
