@@ -7,6 +7,8 @@ ptool = getToolByName(script, 'portal_properties')
 
 if not ptool.hasProperty('default_charset'):
     ptool.manage_addProperty('default_charset', '', 'string')
+if not ptool.hasProperty('email_charset'):
+    ptool.manage_addProperty('email_charset', '', 'string')
 ptool.editProperties(kw)
 
 return context.setStatus(True, _(u'CMF Settings changed.'))
