@@ -1,11 +1,5 @@
 <tal:page i18n:domain="cmf_default"
->Subject: <tal:span i18n:translate=""><tal:span i18n:name="portal_title"
-    tal:content="options/portal_title" />: Membership reminder</tal:span>
-From: <tal:span tal:replace="structure options/portal_address" />
-To: <tal:span tal:replace="structure options/member_address" />
-Content-Type: <tal:span tal:replace="structure options/content_type" />
-
-<tal:span i18n:translate="">Your password: <tal:span i18n:name="password"
+><tal:span i18n:translate="">Your password: <tal:span i18n:name="password"
     tal:content="options/password | default">baz</tal:span></tal:span>
 
 <tal:span i18n:translate="">Request made by IP <tal:span i18n:name="ip"
