@@ -2,10 +2,20 @@ CMF 2.1.0-beta (unreleased)
 
   New Features
 
+    - Portal: Added 'email_charset' property.
+
+    - CMFDefault utils: Added 'makeEmail' function.
+
     - CMFDefault.Image and CMFDefault.File: Overridden index_html methods
       add Cache Policy Manager-awareness and thus bring these implementations
       in line with CMFCore.FSFile and CMFCore.FSImage
       (http://www.zope.org/Collectors/CMF/454)
+
+  Bug Fixes
+
+    - CMFDefault skins: Fixed encoding issues in welcome and reminder emails.
+      'password_email' and 'registered_email' now encode their return value
+      correctly, using 'email_charset' and the new 'makeEmail' function.
 
 
 CMF 2.1.0-alpha (2006/10/09)
